crates/java-syntax/src/snapshots/java_parser__lexer__tests__invalid_underscore_placements-2.snap
---
source: crates/java-syntax/src/lexer.rs
expression: "lex_errors(\"123_.45\")"
---
[
    InvalidNumber,
]
