crates/java-syntax/src/snapshots/java_parser__lexer__tests__invalid_underscore_placements-5.snap
---
source: crates/java-syntax/src/lexer.rs
expression: "lex_errors(\"1e+_10\")"
---
[
    InvalidNumber,
]
