crates/java-syntax/src/snapshots/java_parser__lexer__tests__keywords_and_identifiers-2.snap
---
source: crates/java-syntax/src/lexer.rs
expression: "lex_tokens(\"class interface enum record\")"
---
[
    (
        Class,
        "class",
    ),
    (
        Whitespace,
        " ",
    ),
    (
        Interface,
        "interface",
    ),
    (
        Whitespace,
        " ",
    ),
    (
        Enum,
        "enum",
    ),
    (
        Whitespace,
        " ",
    ),
    (
        Identifier,
        "record",
    ),
]
