crates/java-syntax/src/snapshots/java_parser__lexer__tests__keywords_and_identifiers-3.snap
---
source: crates/java-syntax/src/lexer.rs
expression: "lex_tokens(\"$myVar _underscore value123\")"
---
[
    (
        Identifier,
        "$myVar",
    ),
    (
        Whitespace,
        " ",
    ),
    (
        Identifier,
        "_underscore",
    ),
    (
        Whitespace,
        " ",
    ),
    (
        Identifier,
        "value123",
    ),
]
