crates/java-syntax/src/snapshots/java_parser__lexer__tests__keywords_and_identifiers.snap
---
source: crates/java-syntax/src/lexer.rs
expression: "lex_tokens(\"public static void main\")"
---
[
    (
        Public,
        "public",
    ),
    (
        Whitespace,
        " ",
    ),
    (
        Static,
        "static",
    ),
    (
        Whitespace,
        " ",
    ),
    (
        Void,
        "void",
    ),
    (
        Whitespace,
        " ",
    ),
    (
        Identifier,
        "main",
    ),
]
