crates/java-syntax/src/snapshots/java_parser__lexer__tests__special_characters_and_bom-2.snap
---
source: crates/java-syntax/src/lexer.rs
expression: "lex_tokens(\"int x = 1;\\x1A\")"
---
[
    (
        Int,
        "int",
    ),
    (
        Whitespace,
        " ",
    ),
    (
        Identifier,
        "x",
    ),
    (
        Whitespace,
        " ",
    ),
    (
        Equal,
        "=",
    ),
    (
        Whitespace,
        " ",
    ),
    (
        NumberLiteral,
        "1",
    ),
    (
        Semicolon,
        ";",
    ),
]
