crates/java-syntax/src/snapshots/java_parser__lexer__tests__special_characters_and_bom-3.snap
---
source: crates/java-syntax/src/lexer.rs
expression: "lex_tokens(\"'你'\")"
---
[
    (
        CharLiteral,
        "'你'",
    ),
]
